# Axial_Redpy

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  AXIAL_README.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  axial_settings.cfg  backfill.py  catfill.py  clearJunk.py  clear_junk.py  clusterLocs.py  code.json  compareCatalog.py  compare_catalog.py  convert_catalog.py  convert_dd_catalog.py  createPDFFamily.py  createPDFOverview.py  createReport.py  create_pdf_family.py  create_pdf_overview.py  create_report.py  distantFamilies.py  distant_families.py  environment.yml  example_catalog.csv  extendTable.py  extend_table.py  filter_families.py  forcePlot.py  force_plot.py  initialize.py  makeMeta.py  make_meta.py  plotJunk.py  plot_junk.py  (+14 more)
h5/: .gitignore
redpy/: __init__.py  catalog.py  cluster.py  config.py  correlation.py  detector.py  locate.py  optics.py  output.py  plotting.py  printing.py  table.py  trigger.py  update.py  waveform.py
redpy/outputs/: __init__.py  html.py  image.py  mapping.py  printing.py  report.py  timeline.py
redpy/scripts/: __init__.py  backfill.py  catfill.py  clearjunk.py  comparecatalog.py  createpdffamily.py  createpdfoverview.py  createreport.py  distantfamilies.py  extendtable.py  forceplot.py  initialize.py  makemeta.py  plotjunk.py  removefamily.py  removefamilygui.py  removesmallfamily.py  writefamilylocations.py
runs/: .gitignore
scripts/: redpy-backfill.py  redpy-catfill.py  redpy-clear-junk.py  redpy-compare-catalog.py  redpy-create-pdf-family.py  redpy-create-pdf-overview.py  redpy-create-report.py  redpy-distant-families.py  redpy-extend-table.py  redpy-force-plot.py  redpy-initialize.py  redpy-make-meta.py  redpy-plot-junk.py  redpy-remove-family-gui.py  redpy-remove-family.py  redpy-remove-small-family.py  redpy-write-family-locations.py
scripts/analysis/: eruption_analysis.py  eruption_analysis_part2.py  report_tidal_triggering.py  tidal_R_recovery.py  tidal_R_vs_time.py  tidal_by_family.py  tidal_compare_catalogs.py  tidal_triggering.py
scripts/plotting/: plot_groups_map.py  plot_tidal_rank_map.py  plot_top10_families.py  plot_top20_families.py  plot_top20_locations.py  (+2 more)
tests/: test0.cfg  test1.cfg  test2.cfg  test_coverage.py
(+11 files in other folders)
