[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redpy"
version = "1.0.0"
description = "Automated repeating earthquake detection and clustering"
readme = "README.md"
keywords = [
    "volcanoes",
    "volcano seismology",
    "seismology",
    "earthquakes",
    "multiplets",
    "earthquake swarms",
    "repeating earthquakes"]
dependencies = [
    "bokeh>=3.0",
    "cartopy",
    "matplotlib",
    "numpy",
    "obspy>=1.4.0",
    "pandas",
    "tables",
    "scikit-learn",
    "scipy"]
requires-python = ">=3.9"

[[project.authors]]
email = "ahotovec-ellis@usgs.gov"

[project.license]
text = "CC0-1.0"

[project.scripts]
redpy-backfill = "redpy.scripts.backfill:main"
redpy-catfill = "redpy.scripts.catfill:main"
redpy-clear-junk = "redpy.scripts.clearjunk:main"
redpy-compare-catalog = "redpy.scripts.comparecatalog:main"
redpy-create-pdf-family = "redpy.scripts.createpdffamily:main"
redpy-create-pdf-overview = "redpy.scripts.createpdfoverview:main"
redpy-create-report = "redpy.scripts.createreport:main"
redpy-distant-families = "redpy.scripts.distantfamilies:main"
redpy-extend-table = "redpy.scripts.extendtable:main"
redpy-force-plot = "redpy.scripts.forceplot:main"
redpy-initialize = "redpy.scripts.initialize:main"
redpy-make-meta = "redpy.scripts.makemeta:main"
redpy-plot-junk = "redpy.scripts.plotjunk:main"
redpy-remove-family = "redpy.scripts.removefamily:main"
redpy-remove-family-gui = "redpy.scripts.removefamilygui:main"
redpy-remove-small-family = "redpy.scripts.removesmallfamily:main"
redpy-write-family-locations = "redpy.scripts.writefamilylocations:main"

[tool.setuptools]
packages = ["redpy", "redpy.outputs", "redpy.scripts"]

[tool.pytest.ini_options]
testpaths = ["./tests"]
addopts = "-v -s"
filterwarnings = [
    "ignore::DeprecationWarning:.*bokeh.*",
    "ignore::DeprecationWarning:.*cartopy.*",
    "ignore::DeprecationWarning:.*obspy.*",
    "ignore::DeprecationWarning:.*pkg_resources.*",
    "ignore::DeprecationWarning:.*pyproj.*",
    "ignore::DeprecationWarning:.*scipy.*",
    "ignore::DeprecationWarning:.*tables.*"]